2008-02-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (map_position place_objects) src/graphics.h src/mouse.c
	src/color.c:  Change map_position() to return (int) x,y rather than
	(unsigned int). Callers are modified accordingly.  Bugfix.

	Rationale: This avoids implicit casting that breaks clipping
	calculations on ia64 and PPC.  This patchset fixes clipping of labels
	and rectangles.  Similar clean-up should be done everywhere,
	It is a mistake to use unsigned coordinates before clipping.

2008-02-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term_api.h src/datafile.c src/gadgets.c src/term.c src/gplt_x11.c
	term/cairo.trm term/cgm.trm term/dumb.trm term/eepic.trm term/gd.trm
	term/pdf.trm term/post.trm term/x11.trm src/wxterminal/wxt_term.h
	src/wxterminal/wxt_gui.cpp:  A user has reported problems on ia64 that
	may arise from improper casting between signed and unsigned numbers.
	To facilitate debugging, change "unsigned" to explicit "unsigned int".

	* src/hidden3d.c (sort_edges_by_z sort_polys_by_z):
	Remove incorrect cast to (unsigned long).

	* src/axis.h src/graphics.c src/plot2d.c(store2d_point eval_plots):
	Remove a few more signed/unsigned incompatibilities. Declare variables
	as coord_type rather than int when appropriate.

	* src/datafile.c src/fit.c:  Use defined enum valur NO_AXIS rather
	than the magic number -1 to mark an axis not in use.  Cleaner, and
	avoids signed/unsigned comparisons.

	* docs/href.c(parse) docs/doc2ipf.c(process_line): Null-terminate
	allocated string. Do not walk off the end of a null-terminated string.
	Bug #1900987

2008-02-23  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/faq-ja.tex:  Translation of revision 1.37

2008-02-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c: #include "readline.h"

	* demo/circles.dem demo/html/Makefile demo/html/index.save:
	Include circles.dem in the set of web demos.

2008-02-23  Petr Mikulik  <mikulik@physics.muni.cz>
