@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: set.c,v 1.262 2008/02/22 06:13:49 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: set.c,v 1.263 2008/02/29 17:34:54 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - set.c */
@@ -1290,7 +1290,7 @@ set_format()
 	    = set_for_axis[FIRST_Y_AXIS]
 	    = TRUE;
 	c_token++;
-    } else if (isstring(c_token) || END_OF_COMMAND) {
+    } else {
 	/* Assume he wants all */
 	for (axis = 0; axis < AXIS_ARRAY_SIZE; axis++)
 	    set_for_axis[axis] = TRUE;
@@ -1304,15 +1304,15 @@ set_format()
 	SET_DEFFORMAT(SECOND_Y_AXIS, set_for_axis);
 	SET_DEFFORMAT(COLOR_AXIS   , set_for_axis);
     } else {
-	if (!isstring(c_token))
+	char *format = try_to_get_string();
+	if (!format)
 	    int_error(c_token, "expecting format string");
 	else {
 
-#define SET_FORMATSTRING(axis)						      \
-	    if (set_for_axis[axis]) {					      \
-		quote_str(axis_array[axis].formatstring,c_token, MAX_ID_LEN); \
-		axis_array[axis].format_is_numeric =			      \
-		    looks_like_numeric(axis_array[axis].formatstring);	      \
+#define SET_FORMATSTRING(axis)							\
+	    if (set_for_axis[axis]) {						\
+		strncpy(axis_array[axis].formatstring, format, MAX_ID_LEN);	\
+		axis_array[axis].format_is_numeric = looks_like_numeric(format);\
 	    }
 	    SET_FORMATSTRING(FIRST_X_AXIS);
 	    SET_FORMATSTRING(FIRST_Y_AXIS);
@@ -1322,6 +1322,7 @@ set_format()
 	    SET_FORMATSTRING(COLOR_AXIS);
 #undef SET_FORMATSTRING
 
+	    free(format);
 	    c_token++;
 	}
     }
@@ -3949,6 +3950,8 @@ set_tics()
 	    ++c_token;
 	    for (i = 0; i < AXIS_ARRAY_SIZE; ++i)
 		axis_array[i].ticdef.offset = tics_nooffset;
+	} else if (almost_equals(c_token, "format")) {
+	    set_format();
 	} else if (almost_equals(c_token, "f$ont")) {
 	    ++c_token;
 	    /* Make sure they've specified a font */
@@ -4431,10 +4434,19 @@ set_tic_prop(AXIS_INDEX axis)
 		    int_error(c_token,"expected font");
 		else {
 		    free(axis_array[axis].ticdef.font);
-		    /* FIXME: protect against int_error() bail from try_to_get_string */
 		    axis_array[axis].ticdef.font = NULL;
 		    axis_array[axis].ticdef.font = try_to_get_string();
 		}
+	    } else if (equals(c_token,"format")) {
+		char *format;
+		++c_token;
+		if (!((format = try_to_get_string())))
+		    int_error(c_token,"expected format");
+		strncpy(axis_array[axis].formatstring, format,
+			sizeof(axis_array[axis].formatstring));
+		free(format);
+		axis_array[axis].format_is_numeric =
+			looks_like_numeric(axis_array[axis].formatstring);
 	    } else if (equals(c_token,"tc") ||
 		       almost_equals(c_token,"text$color")) {
 		parse_colorspec(&axis_array[axis].ticdef.textcolor, TC_FRAC);
